frontend/test/should_fail/param_003.grg
using attrib_model_001;

rule r (ni : NINT) : (NINT) {
	pattern {
	}
	replace {
		return (ni);
	}
}

